--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "devDependencies": {
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^7.1.1"
   },
   "dependencies": {
     "@types/three": "^0.179.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "three": "^0.179.1"
   }
 }
