--- a/package.json
+++ b/package.json
@@ -5,17 +5,15 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
-    "vite": "^7.1.1"
+    "vite": "^5.0.8"
   },
   "dependencies": {
     "@types/three": "^0.179.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
     "three": "^0.179.1"
   }
 }
