--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "glb-viewer",
+  "name": "glb-ripple-sanity",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,17 +8,10 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "^5.9.2",
-    "vite": "^5.4.19"
-  },
   "dependencies": {
-    "@react-three/drei": "^10.6.1",
-    "@react-three/fiber": "^9.3.0",
-    "@types/three": "^0.179.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
     "three": "^0.179.1"
+  },
+  "devDependencies": {
+    "vite": "^5.4.2"
   }
 }
