--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "glb-ripple-sanity",
+  "name": "glb-viewer-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,21 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^10.6.1",
-    "@react-three/fiber": "^9.3.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "three": "^0.179.1",
-    "@react-three/fiber": "^8.15.12",
-    "@react-three/drei": "^9.92.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "three": "^0.179.0",
+    "@react-three/fiber": "^9.3.0",
+    "@react-three/drei": "^10.6.1"
   },
   "devDependencies": {
     "vite": "^5.4.2",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^4.2.1",
-    "typescript": "^5.2.2"
+    "@vitejs/plugin-react": "^4.3.3",
+    "typescript": "^5.5.4"
   }
 }
